--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Login DockerHub
+      env: 
+          DOCKER_USERNAME: ${{DOCKER_USERNAME}}
+          DOCKER_PASSWORD: ${{DOCKER_PASSWORD}}
+      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build -t cicd-pipeline.
+
+    - name: Push to Docker Hub
+      run: docker push 1010varun/cicd-pipeline:latest
